# ProjectMultimediaPlayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  YUV格式解析.md  compile_commands.json
include/codec/: av_codec_context_ptr.hpp  av_codec_ptr.hpp  av_common.hpp  av_error.hpp  av_format_context_ptr.hpp  av_frame_ptr.hpp  av_packet_ptr.hpp  av_stream_ptr.hpp
include/main/: decode_mp4.hpp  window_main.h  window_main.hpp  window_main_opengl.hpp
include/renderer/: i_frame_renderer.hpp  sdl_frame_renderer.hpp
include/util/: util_vector_2d.hpp
include/view/: main_window.hpp  opengl_video_widget.hpp  qt_video_widget.hpp  sdl_video_widget.hpp
reference/: TestQtOpengl.cpp  TestQtOpengl.h
source/codec/: av_codec_context_ptr.cpp  av_codec_ptr.cpp  av_common.cpp  av_error.cpp  av_format_context_ptr.cpp  av_frame_context_ptr.cpp  av_frame_ptr.cpp  av_packet_ptr.cpp  av_stream_ptr.cpp
source/main/: decode_mp4.cpp  main.cpp  window_main.cpp  window_main_opengl.cpp
source/renderer/: i_frame_renderer.cpp  sdl_frame_renderer.cpp
source/view/: main_window.cpp  opengl_video_widget.cpp  qt_video_widget.cpp  sdl_video_widget.cpp
